refactored to update from class to segment

--- a/project.json
+++ b/project.json
@@ -1,1 +1,1 @@
-{"accountSpecificValues":"ERROR","defaultAuthId":"TSTDRV2319702-Adm-Prod"}
+{"accountSpecificValues":"ERROR","defaultAuthId":"3731640-Adm-Prod"}
